# test

./: .gitignore  .gitlab-ci.yml  README.md  deploy.sh  dockerfile  getenv.sh  postgres-compose.yaml  pyproject.toml  test.py
src/: __init__.py  indexer.py  indexing.sh  sample.json
src/apps/: __init__.py
src/apps/hr_department/: admin.py  apps.py  documents.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/apps/hr_department/documents/: __init__.py  admin_search_document.py  spreadSheet_search_document.py
src/apps/hr_department/migrations/: 0001_initial.py  0002_auto_20230123_0904.py  0002_draftemployeeinformation_is_editable_and_more.py  0002_draftemployeeinformation_serveremployeeinformation_and_more.py  0002_draftemployeeinformation_status_and_more.py  0003_alter_draftemployeeinformation_inn_number_and_more.py  0003_auto_20230122_2158.py  0003_remove_draftemployeeinformation_childrens_birth_certificates_date_of_birthday_and_more.py  0003_rename_first_vaccination_date_draftemployeeinformation_vaccination_first_date_and_more.py  0004_alter_draftemployeeinformation_im_foreigner_and_more.py  0004_children_education_and_more.py  0005_draftemployeeinformation_department_and_more.py  0005_draftemployeeinformation_first_vaccination_date_and_more.py  0006_rename_childrens_draftemployeeinformation_children_and_more.py  0007_alter_draftemployeeinformation_inn_photo_and_more.py
src/apps/hr_department/serializers/: __init__.py  (+6 more)
src/config/: env_variables.py  settings.py  urls.py
src/config/settings/: __init__.py  base.py  dev.py  local.py  prod.py
(+27 files in other folders)
